--- a/EEM2020/index.html
+++ b/EEM2020/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=//www.pascalanalytics.com" />
+    <meta http-equiv="Refresh" content="0; url=//https://nyu.qualtrics.com/jfe/form/SV_eG74FjYs0oVhuTj" />
   </head>
   <body>
-    <p>Please follow <a href="//www.pascalanalytics.com/">this link</a>.</p>
+    <p>Cargando...</p>
   </body>
 </html>
