--- a/EEM2020/index.html
+++ b/EEM2020/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=//https://nyu.qualtrics.com/jfe/form/SV_eG74FjYs0oVhuTj" />
+    <meta http-equiv="Refresh" content="0; url=https://nyu.qualtrics.com/jfe/form/SV_eG74FjYs0oVhuTj" />
   </head>
   <body>
     <p>Cargando...</p>
